@@ -16,7 +16,6 @@
 package org.fedoraproject.xmvn.generator.transformer;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.fedoraproject.xmvn.generator.BuildContext;
 import org.fedoraproject.xmvn.generator.Hook;
 import org.fedoraproject.xmvn.generator.HookFactory;
@@ -25,10 +24,10 @@ public class TransformerHookFactory implements HookFactory {
     @Override
     public Hook createHook(BuildContext context) {
         ManifestTransformer transformer = new ManifestInjector(context);
-        Path buildRoot = Paths.get(context.eval("%{buildroot}"));
+        Path buildRoot = Path.of(context.eval("%{buildroot}"));
         TransformerHook hook = new TransformerHook(transformer, buildRoot);
-        hook.addDirectoryPrefix(Paths.get(context.eval("%{_javadir}")));
-        hook.addDirectoryPrefix(Paths.get(context.eval("%{_jnidir}")));
+        hook.addDirectoryPrefix(Path.of(context.eval("%{_javadir}")));
+        hook.addDirectoryPrefix(Path.of(context.eval("%{_jnidir}")));
         return hook;
     }
 }
