@@ -19,7 +19,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.jar.JarInputStream;
 import org.easymock.EasyMock;
 import org.junit.jupiter.api.Test;
@@ -34,12 +33,12 @@ public class TransformerHookTest {
         Path jarPath = buildRoot.resolve("some/prefix/abc.jar");
         Files.createDirectories(buildRoot.resolve("some/prefix"));
         Files.createDirectories(buildRoot.resolve("another/dir"));
-        Files.copy(Paths.get("src/test/resources/example.jar"), jarPath);
+        Files.copy(Path.of("src/test/resources/example.jar"), jarPath);
         ManifestTransformer transformer = mf -> mf.getMainAttributes().putValue("Injected", "Test");
         TransformerHook generator = new TransformerHook(transformer, buildRoot);
-        generator.addDirectoryPrefix(Paths.get("/foo"));
-        generator.addDirectoryPrefix(Paths.get("/some/prefix"));
-        generator.addDirectoryPrefix(Paths.get("/another/dir"));
+        generator.addDirectoryPrefix(Path.of("/foo"));
+        generator.addDirectoryPrefix(Path.of("/some/prefix"));
+        generator.addDirectoryPrefix(Path.of("/another/dir"));
         generator.run();
         try (JarInputStream jis = new JarInputStream(Files.newInputStream(jarPath))) {
             assertEquals("Test", jis.getManifest().getMainAttributes().getValue("Injected"));
@@ -50,10 +49,10 @@ public class TransformerHookTest {
     public void testInvalidJar() throws Exception {
         Path jarPath = buildRoot.resolve("some/prefix/abc.jar");
         Files.createDirectories(buildRoot.resolve("some/prefix"));
-        Files.copy(Paths.get("src/test/resources/invalid.jar"), jarPath);
+        Files.copy(Path.of("src/test/resources/invalid.jar"), jarPath);
         ManifestTransformer transformer = EasyMock.createStrictMock(ManifestTransformer.class);
         TransformerHook generator = new TransformerHook(transformer, buildRoot);
-        generator.addDirectoryPrefix(Paths.get("/some/prefix"));
+        generator.addDirectoryPrefix(Path.of("/some/prefix"));
         EasyMock.replay(transformer);
         generator.run();
         EasyMock.verify(transformer);
@@ -64,10 +63,10 @@ public class TransformerHookTest {
         Path jarPath = buildRoot.resolve("some/prefix/abc.jar");
         Files.createDirectories(buildRoot.resolve("some/prefix"));
         Files.createDirectories(buildRoot.resolve("mismatched/prefix"));
-        Files.copy(Paths.get("src/test/resources/example.jar"), jarPath);
+        Files.copy(Path.of("src/test/resources/example.jar"), jarPath);
         ManifestTransformer transformer = EasyMock.createStrictMock(ManifestTransformer.class);
         TransformerHook generator = new TransformerHook(transformer, buildRoot);
-        generator.addDirectoryPrefix(Paths.get("/mismatched/prefix"));
+        generator.addDirectoryPrefix(Path.of("/mismatched/prefix"));
         EasyMock.replay(transformer);
         generator.run();
         EasyMock.verify(transformer);
